[tool.poetry]
name = "llm-langchain-app"
version = "0.1.0"
description = "Test llm apps"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
streamlit = "^1.40.0"
langchain = "^0.3.7"
openai = "^1.54.3"
langchain-community = "^0.2.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
